# ucloud-iot-device-sdk-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  make.settings
external_libs/googletest/: CMakeLists.txt
external_libs/googletest/src/: gtest-death-test.cc
platform/module/: hal_at.c
platform/module/ec20_freertos_tcp/: ec20.c
platform/module/esp8266_freertos_tcp/: esp8266.c
platform/module/m26_freertos_tcp/: m26.c
platform/module/sim800c_freertos_tcp/: sim800c.c
platform/os/freertos/: HAL_Flash_Platform.h  HAL_Flash_freertos.c  HAL_OS_freertos.c  HAL_TCP_freertos.c  HAL_Timer_Platform.h  HAL_Timer_freertos.c
platform/os/linux/: HAL_Flash_Platform.h  HAL_Flash_linux.c  HAL_OS_linux.c  HAL_TCP_linux.c  HAL_Timer_Platform.h  HAL_Timer_linux.c
platform/os/nos/: HAL_Flash_Platform.h  HAL_Flash_nos.c  HAL_OS_nos.c  HAL_TCP_nos.c  HAL_Timer_Platform.h  HAL_Timer_nos.c
platform/ssl/mbedtls/: HAL_TLS_mbedtls.c
samples/: CMakeLists.txt  samples.mk
samples/dev_model/: dev_model_sample.c  dev_model_sample_ex.c
samples/dynamic_auth/: dynamic_auth_sample.c
samples/http/: download_file_sample.c  http_client_sample.c  http_upload.c  upload_file_sample.c
samples/mqtt/: mqtt_sample.c
samples/ota/: ota_sample.c
samples/shadow/: shadow_sample.c  smart_bracelet_heart_rate_shadow_sample.c  smart_bracelet_walk_step_shadow_sample.c
samples/upload_file/: download_file_sample.c  upload_file_sample.c
src/at/class/ec20/: ec20.c
src/at/class/esp8266/: esp8266.c
src/at/class/m26/: m26.c
src/at/class/sim800c/: sim800c.c
src/at/include/: at_client.h  at_inf.h  at_ringbuff.h  at_utils.h
src/at/src/: at_client.c  at_inf.c  at_ringbuff.c  at_utils.c
src/certs/: ca.c
src/dev_model/include/: dm_command.h  dm_event.h  dm_property.h
src/dev_model/src/: dm_client.c  dm_command_config.c  dm_event_config.c  dm_mqtt.c  dm_property_config.c
src/http/: file_upload.c  http_client.c  http_upload_file.c
src/mqtt/include/: mqtt_client.h  mqtt_client_net.h
src/mqtt/src/: mqtt_client.c  mqtt_client_common.c  mqtt_client_connect.c  mqtt_client_net.c  mqtt_client_publish.c  mqtt_client_subscribe.c  mqtt_client_unsubscribe.c  mqtt_client_yield.c
src/ota/include/: ota_internal.h
src/ota/src/: ota_client.c  ota_fetch.c  ota_lib.c  ota_mqtt.c
src/sdk-impl/: uiot_defs.h  uiot_export.h  uiot_export_file_upload.h  uiot_export_http.h  uiot_export_ota.h  uiot_export_shadow.h  uiot_import.h
src/shadow/include/: shadow_client.h  shadow_client_common.h  shadow_client_json.h
src/shadow/src/: shadow_client.c  shadow_client_common.c  shadow_client_json.c  shadow_client_manager.c
src/upload_file/: upload_file.c
src/utils/: json_parser.c  json_parser.h  json_token.c  lite-list.h  lite-utils.h  string_utils.c  utils_httpc.c  utils_httpc.h  utils_list.c  utils_list.h  utils_md5.c  utils_md5.h  utils_net.c  utils_net.h  utils_timer.c  utils_timer.h
tests/unit_test/: CMakeLists.txt  unit_test.mk
tests/unit_test/src/: unit_dynamic_auth_test.cpp  unit_http_test.cpp  unit_mqtt_test.cpp  unit_shadow_test.cpp
tools/: codegen.py  command_config.c  event_config.c  template.json
tools/dm_gen/: codegen.py  command_config.c  property_config.c
tools/scripts/: default_settings.mk  parse_make_settings.mk  rules-final.mk  rules-tests.mk  rules.mk  settings.mk
